--- a/etc/php.ini
+++ b/etc/php.ini
@@ -395,7 +395,8 @@ max_input_time = -1
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 128M
+; cron job exceptionreports.php needs this
+memory_limit = 1024M
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
